# utility_apps

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  style.css
libs/: supabase_client.py  tan_utils.py
pages/: 00_cheatsheet.py  01_clock.py  01_page1.py  02_page2.py  02_wareki.py  03_chart.py  03_math.py  03_math_charts.py  04_base.py  04_base_converter.py  04_genpasswd.py  06_unix_permission.py  07_color_display.py  08_ascii_converter.py  09_cidr_checker.py  10_cron_generator.py  11_ieee754_visualizer.py  12_sin_cos_table.py  13_tan_table.py  14_math_transforms.py  math.py
tests/: test_base_converter.py
tools/: ascii_converter.py  base_converter.py  cidr_checker.py  clock.js  clock.py  datetime_utils.py  genpasswd.py  wareki.py
tools/math/: cos.py  fibonacci.py  kaprekar.py  polynomial.py  sin.py  tan.py
