[project]
name = "utility-apps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lunardate>=0.2.2",
    "matplotlib>=3.10.7",
    "matplotlib-fontja>=1.1.0",
    "pyperclip>=1.11.0",
    "pytz>=2025.2",
    "streamlit>=1.50.0",
    "streamlit-clipboard>=0.0.6",
    "supabase>=2.22.1",
    "watchdog>=6.0.0",
]
